--- a/DFU_Tool/DFU_Tool/Base.lproj/Main.storyboard
+++ b/DFU_Tool/DFU_Tool/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14460.31"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14490.70"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -600,7 +600,7 @@
                                         <menuItem title="Show Sidebar" keyEquivalent="s" id="kIP-vf-haE">
                                             <modifierMask key="keyEquivalentModifierMask" control="YES" command="YES"/>
                                             <connections>
-                                                <action selector="toggleSourceList:" target="Ady-hI-5gd" id="iwa-gc-5KM"/>
+                                                <action selector="toggleSidebar:" target="Ady-hI-5gd" id="iwa-gc-5KM"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem title="Enter Full Screen" keyEquivalent="f" id="4J7-dP-txa">
@@ -677,17 +677,6 @@
                                 <toolbarItem implicitItemIdentifier="NSToolbarPrintItem" id="aJx-um-AgF"/>
                                 <toolbarItem implicitItemIdentifier="NSToolbarSpaceItem" id="dGK-rT-OcS"/>
                                 <toolbarItem implicitItemIdentifier="NSToolbarFlexibleSpaceItem" id="gQn-gj-Xxv"/>
-                                <toolbarItem implicitItemIdentifier="C98CEDB7-7C1E-48C4-B625-39724815085A" label="Custom View" paletteLabel="Custom View" sizingBehavior="auto" id="oZ5-Y8-bVw">
-                                    <nil key="toolTip"/>
-                                    <button key="view" verticalHuggingPriority="750" id="grF-Kc-O1b">
-                                        <rect key="frame" x="0.0" y="14" width="82" height="32"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                        <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="9K6-ok-wXH">
-                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                            <font key="font" metaFont="system"/>
-                                        </buttonCell>
-                                    </button>
-                                </toolbarItem>
                                 <toolbarItem implicitItemIdentifier="CC0EA7C2-EEAE-4EB7-B964-A358830092C9" label="MixState" paletteLabel="MixState" image="NSTouchBarCommunicationAudioTemplate" sizingBehavior="auto" id="n1h-cB-vqP">
                                     <nil key="toolTip"/>
                                     <imageView key="view" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="vK4-cv-XEL">
@@ -710,11 +699,26 @@
                                         </connections>
                                     </button>
                                 </toolbarItem>
+                                <toolbarItem implicitItemIdentifier="5AEB30BC-D7F2-4E05-BD9A-20939A09CEB4" label="" paletteLabel="" sizingBehavior="auto" id="WNh-fd-U3p">
+                                    <nil key="toolTip"/>
+                                    <button key="view" verticalHuggingPriority="750" id="FFZ-tz-cRP">
+                                        <rect key="frame" x="0.0" y="14" width="139" height="43"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <buttonCell key="cell" type="push" title="DFU_StationCatch" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="SlA-vB-AXo">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                        <connections>
+                                            <action selector="CatchFW:" target="B8D-0N-5wS" id="Scm-tb-l7p"/>
+                                        </connections>
+                                    </button>
+                                </toolbarItem>
                             </allowedToolbarItems>
                             <defaultToolbarItems>
                                 <toolbarItem reference="n1h-cB-vqP"/>
                                 <toolbarItem reference="jNk-iF-4V5"/>
                                 <toolbarItem reference="gQn-gj-Xxv"/>
+                                <toolbarItem reference="WNh-fd-U3p"/>
                             </defaultToolbarItems>
                         </toolbar>
                     </window>
